# avatar-asset-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
components/: bones_func.inl  fbx2gltf_execute.hpp  fbx_pipeline.hpp  glb_T_pose.hpp  glb_fix_roll.hpp  glb_jpeg_to_png.hpp  glb_overrides.hpp  glb_transforms_apply.hpp  glb_z_reverse.hpp  gltf_bone_mappings.inl  gltf_func.inl  gltf_pipeline.hpp  gltfpack_execute.hpp  gltfpack_pipeline.hpp  json_func.inl  noop.hpp  vrm0_default_extensions.hpp  vrm0_fix_joint_buffer.hpp  vrm0_func.inl  vrm0_remove_extensions.hpp
include/: bones_func.inl  gltf_func.inl  gltf_overrides_func.inl  json_func.inl  pipelines.hpp  stb_leakcheck.h  vrm0_func.inl
models/: input.common001.bones.json  input.common001.json  input.common002.json  input.mixamo.bones.json  input.mixamo.json  input.readyplayerme.bones.json  input.readyplayerme.json  input.rocketbox.bones.json  input.rocketbox.json  models-LICENSE.md  output.mixamo.json  output.rocketbox.json  output.vrm0.json  output.vrm0.mixamo.json  xbot.fbx
pipelines/: fbx2glb.json  fbx2glb_T_pose.json  fbx2glb_apply.json  fbx2glb_tpose.json  fbx2vrm0.json  fbx2vrm0_T_pose.json  glb2vrm0.json  glb2vrm0_T_pose.json  glb2vrm0_T_pose_optimize.json  glb_T_pose.json  glb_T_pose_optimize.json  glb_fix_roll.json  vrm02glb.json
src/: main.cpp
tools/fbx2acl/: fbx2acl.py
